fixed header vertical text alignment and last project overlay effect

--- a/styles.scss
+++ b/styles.scss
@@ -34,11 +34,12 @@ body {
 .header {
   width: 100%;
   height: 96px;
-
+  
   .header_content {
     padding: 38px 120px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     .header_logo {
       font-family: $font-primary;
